package in_myfiles.other_pattern.repository

class QueryParams {
    var searchType = SearchType.LOCAL
}