package in_myfiles.other_pattern.repository

interface SearchInterface {
    fun query(): List<SearchFileInfo>
}